--- a/portfolio/activities.html
+++ b/portfolio/activities.html
@@ -35,7 +35,7 @@
                 <td>Portfolio Website</td>
                 <td>Created a responsive portfolio website using HTML, CSS, and JavaScript</td>
                 <td><a href="https://github.com/thvvedha/vedha.github.io/blob/main/portfolio/example.html" target="_blank">View Source</a></td>
-                <td><a href="https://github.com/thvvedha/vedha.github.io" target="_blank">Live Site</a></td>
+                <td><a href="https://github.com/thvvedha/vedha.github.io/example.html" target="_blank">Live Site</a></td>
             </tr>
         </tbody>
     </table>
