--- a/portfolio/activities.html
+++ b/portfolio/activities.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="header">
-        <h1>My Recent Activities</h1>
+        <h1>My Activities</h1>
         <a href="example.html" class="back-link">← Back to Portfolio</a>
     </div>
 
@@ -35,7 +35,7 @@
                 <td>Portfolio Website</td>
                 <td>Created a responsive portfolio website using HTML, CSS, and JavaScript</td>
                 <td><a href="https://github.com/thvvedha/vedha.github.io/blob/main/portfolio/example.html" target="_blank">View Source</a></td>
-                <td><a href="https://github.com/thvvedha/vedha.github.io/example.html" target="_blank">Live Site</a></td>
+                <td><a href="https://vedha.github.io/portfolio/example.html" target="_blank">Live Site</a></td>
             </tr>
         </tbody>
     </table>
