--- a/test17-02-26.html/counter.html
+++ b/test17-02-26.html/counter.html
@@ -10,16 +10,26 @@
     <button onclick="increment()">Increment</button>
     <button onclick="decrement()">Decrement</button>
     <script>
-        let count = 0;
+
+        let prev_count=localStorage.getItem("count");
+        if (prev_count==null){
+            var count=0;
+        }
+        else{
+            document.getElementById("counter").innerText=prev_count;
+            count=parseInt(prev_count);
+        }
 
         function increment() {
             count= count + 1;
-            document.getElementById('counter').innerText = count;;
+            document.getElementById('counter').innerText = count;
+            localStorage.setItem("count", count);
         }
 
         function decrement() {
             count= count - 1;
-            document.getElementById('counter').innerText = count;;
+            document.getElementById('counter').innerText = count;
+            localStorage.setItem("count", count);
         }
 
         window.localStorage.setItem('count', count);
