--- a/test17-02-26.html/todo-list.html
+++ b/test17-02-26.html/todo-list.html
@@ -14,7 +14,7 @@
 
     <script>
         // Initialize tasks from localStorage
-        let tasks = JSON.parse(localStorage.getItem('tasks'));
+        let tasks = JSON.parse(window.localStorage.getItem('tasks'));
 
         // Function to display tasks on the page
         function displayTasks() {
