--- a/test17-02-26.html/counter.html
+++ b/test17-02-26.html/counter.html
@@ -11,7 +11,7 @@
     <button onclick="decrement()">Decrement</button>
     <script>
 
-        let prev_count=localStorage.getItem("count");
+        let prev_count=window.localStorage.getItem("count");
         if (prev_count==null){
             var count=0;
         }
@@ -23,13 +23,13 @@
         function increment() {
             count= count + 1;
             document.getElementById('counter').innerText = count;
-            localStorage.setItem("count", count);
+            window.localStorage.setItem("count", count);
         }
 
         function decrement() {
             count= count - 1;
             document.getElementById('counter').innerText = count;
-            localStorage.setItem("count", count);
+            window.localStorage.setItem("count", count);
         }
 
         window.localStorage.setItem('count', count);
